--- a/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-trello/acceptance-test-config.yml
@@ -16,6 +16,8 @@ acceptance_tests:
       - config_path: "secrets/config.json"
         backward_compatibility_tests_config:
           disable_for_version: 0.1.6
+        backward_compatibility_tests_config:
+          disable_for_version: 0.2.0
   basic_read:
     tests:
       - config_path: "secrets/config.json"
@@ -27,7 +29,7 @@ acceptance_tests:
         future_state:
           future_state_path: "integration_tests/abnormal_state.json"
         cursor_paths:
-          actions: ["date"]
+          actions: ["611aa586ef5f2c8e1deec8b6", "date"]
   full_refresh:
     tests:
       - config_path: "secrets/config.json"
