--- a/airbyte-integrations/connectors/source-postgres/build.gradle
+++ b/airbyte-integrations/connectors/source-postgres/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'airbyte-integration-test-java'
     id 'airbyte-performance-test-java'
     id 'airbyte-connector-acceptance-test'
-}
+    id 'org.gradle.test-retry' version '1.5.2'
+ }
 
 application {
     mainClass = 'io.airbyte.integrations.source.postgres.PostgresSourceRunner'
@@ -37,4 +38,12 @@ dependencies {
     implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
     integrationTestJavaImplementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
     performanceTestJavaImplementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
+}
+
+test {
+    retry {
+        maxRetries.set(3)
+        maxFailures.set(20)
+        failOnPassedAfterRetry.set(false)
+    }
 }
