--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -3762,7 +3762,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-facebook-marketing:0.2.86"
+- dockerImage: "airbyte/source-facebook-marketing:0.3.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/facebook-marketing"
     changelogUrl: "https://docs.airbyte.com/integrations/sources/facebook-marketing"
@@ -3842,6 +3842,16 @@
               name:
                 title: "Name"
                 description: "The name value of insight"
+                type: "string"
+              level:
+                title: "Level"
+                description: "Chosen level for API"
+                default: "ad"
+                enum:
+                - "ad"
+                - "adset"
+                - "campaign"
+                - "account"
                 type: "string"
               fields:
                 title: "Fields"
