--- a/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/project_cards.json
@@ -24,11 +24,11 @@
       "$ref": "user.json"
     },
     "created_at": {
-      "type": ["null", "string"],
+      "type": "string",
       "format": "date-time"
     },
     "updated_at": {
-      "type": ["null", "string"],
+      "type": "string",
       "format": "date-time"
     },
     "column_url": {
