--- a/airbyte-integrations/connectors/source-github/source_github/schemas/projects.json
+++ b/airbyte-integrations/connectors/source-github/source_github/schemas/projects.json
@@ -39,11 +39,11 @@
       "$ref": "user.json"
     },
     "created_at": {
-      "type": ["null", "string"],
+      "type": "string",
       "format": "date-time"
     },
     "updated_at": {
-      "type": ["null", "string"],
+      "type": "string",
       "format": "date-time"
     }
   }
