--- a/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-sentry/acceptance-test-config.yml
@@ -8,6 +8,11 @@ acceptance_tests:
         extra_fields: no
         exact_order: no
         extra_records: yes
+      empty_streams:
+        - name: "events"
+          bypass_reason: "Data reset after some time"
+        - name: "issues"
+          bypass_reason: "Data reset after some time"
       ignored_fields:
         project_detail:
         - name: features
