--- a/.github/workflows/connector_integration_test_single_dagger.yml
+++ b/.github/workflows/connector_integration_test_single_dagger.yml
@@ -9,6 +9,7 @@ on:
   pull_request:
     paths:
       - "airbyte-integrations/connectors/**"
+      - ".github/workflows/connector_integration_test_single_dagger.yml"
 jobs:
   connectors_ci:
     name: Connectors CI
