--- a/airbyte-integrations/connectors/source-breaker/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-breaker/acceptance-test-config.yml
@@ -3,21 +3,21 @@ test_strictness_level: high
 acceptance_tests:
   connection:
     tests:
-      - config_path: secrets/config.json
+      - config_path: test_configs/config.json
         status: succeed
-      - config_path: integration_tests/invalid_config.json
+      - config_path: test_configs/config_check_connection_fail.json
         status: failed
+      - config_path: test_configs/config_check_job_fail.json
+        status: exception
   spec:
     tests:
       - spec_path: source_breaker/spec.json
   discovery:
     tests:
-      - config_path: secrets/config.json
-        backward_compatibility_tests_config:
-          disable_for_version: "1.0.0" # We changed the cursor field of the Purchases stream in 2.0.0
+      - config_path: test_configs/config.json
   basic_read:
     tests:
-      - config_path: secrets/config.json
+      - config_path: test_configs/config.json
         empty_streams: []
         expect_records:
           path: integration_tests/expected_records.jsonl
@@ -26,7 +26,7 @@ acceptance_tests:
           extra_records: false
   full_refresh:
     tests:
-      - config_path: secrets/config.json
+      - config_path: test_configs/config.json
         configured_catalog_path: integration_tests/configured_catalog.json
         ignored_fields:
           users:
@@ -34,7 +34,7 @@ acceptance_tests:
             - updated_at
   incremental:
     tests:
-      - config_path: secrets/config.json
+      - config_path: test_configs/config.json
         configured_catalog_path: integration_tests/configured_catalog.json
         future_state:
           future_state_path: integration_tests/abnormal_state.json
